# chess_engine

./: .gitignore  ANALISI_SEARCH_EVAL_ROADMAP.md  BUG_AUDIT.md  CLAUDE.md  DATAGEN_QUALITY_PLAN.md  EVALUATOR_OPTIMIZATION_ANALYSIS.md  EVALUATOR_STRENGTH_AUDIT.md  HALFKA_PLAN.md  HCE_RESIDUE_AUDIT.md  HOTPATH_IMPROVEMENTS.md  HOTPATH_PARAM_PERF_ANALYSIS.md  HydraY  LICENSE  NNUE_PLAN.md  OPTIMIZATIONS.md  OPTIMIZATION_ROADMAP.md  README.md  TIME_MANAGEMENT.md  TODO.md  andrewashere  ascii_utils.hpp  check.cpp  chess  chessengine.h  chessengine.hpp  claudio-risposte.md  coords.hpp  debug.hpp  debug_timer.hpp  defines.h  defines.hpp  engine_bottlenecks.md  functions.cpp  gamestatus.h  gmon.out  idea-tuning.md  includes.h  includes.hpp  legalmoves.cpp  list.cpp  (+30 more)
board/: board.cpp  board.d  board.hpp  board.inl  boardapi.cpp  boardapi.inl  boardenginemove.cpp  boardenginemove.d  coords.hpp  engineapi.cpp  fen.cpp  fen.d  magic_numbers.hpp  piece.hpp
coords/: coords.cpp  coords.hpp
cpp/: functions.cpp
cs/: chess_engine_cs.csproj  chess_engine_cs.sln  test.txt
doc/: architettura.tex  bug-report-piece-sacrifice-2026-02-03.md  canMoveToBB-design.md  code-review-engine-2026-01-20.md  compile.sh  evaluate.tex  evaluation-review-2026-02-09.md  magic-bitboards-plan.md  main-doc.aux  main-doc.tex  main-doc.toc  move-ordering-analysis-2026-02-03.md  obbiettivi.tex  output-analisi-statica.md  pawn-sacrifice-fixes-2026-02-03.md  todo.tex  (+1 more)
nnue/trainer/: Cargo.toml  README.md  colab_halfka.ipynb  colab_ob.ipynb  colab_shakedown.ipynb  colab_v1.ipynb  colab_v2.ipynb
tests/: perf  (+12 more)
(+472 files in other folders)
