[package]
name = "hydray-trainer"
version = "0.1.0"
edition = "2021"

# bullet is GPU-only (cuda/rocm/metal): the `trainer` binary is meant to run on
# Colab (T4, --features cuda). The `sanity` binary is pure std and always
# buildable locally — it is the reference reader for quantised.bin and the
# specification for the engine-side C++ loader (NNUE Fase 3).

[dependencies]
bullet_lib = { git = "https://github.com/jw1912/bullet", rev = "cebc78a093d92cbc87e56cfef049184c225270b0", optional = true }

[features]
train = ["dep:bullet_lib"]
cuda = ["train", "bullet_lib/cuda"]

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"
required-features = ["train"]

[[bin]]
name = "sanity"
path = "src/bin/sanity.rs"
